# DroneAutoLander

./: README.md
auto_lander/: export_yolo11n_ncnn.py  package.xml  setup.cfg  setup.py
auto_lander/auto_lander/: apriltagdetector.py  bearing_measurement_generation.py  camera_calibrate.py  controller.py  implimented_controllers.py  landing_pad_detector.py  mpc_controller.py  pid_controller.py  state_definitions.py  tagposedetector.py  ukf.py
auto_lander/launch/: main_launch.py  sim_launch.py  webcam_launch.py
auto_lander_v2/: CMakeLists.txt  package.xml
auto_lander_v2/include/auto_lander_v2/: controller_state_orchestrator.hpp
auto_lander_v2/launch/: main_launch_cpp.py
auto_lander_v2/src/: controller_state_orchestrator.cpp
data/: .~lock.controller_20260411_172142 (2.0, 0.5).csv#  PN_PD_Controller_20260217.csv  controller_20260219_013449.ods  controller_20260219_164214.ods  controller_20260219_215119.ods  controller_20260222_134805 - 1.5ms TURN SUCCESS.ods  controller_20260308_205328.ods  controller_20260411_172142_RUN_2.0_0.5.csv  controller_20260411_173429(3.0, 0.5).csv  controller_20260411_173429_RUN_3.0_0.5.ods  controller_20260606_223441_10ms_straight_success.csv  controller_20260612_200157_8ms_landing_with_vid.csv  controller_20260614_005732_3ms_1ms_turn.csv
models/: gazebo-iris-gimbal_1d.parm
models/X1/: model.sdf
models/X1/meshes/: top_plate.dae  top_plate_new.dae
models/gimbal_small_1d/: model.sdf
models/gimbal_small_3d/: model.sdf
models/iris_with_gimbal/: model.sdf
worlds/: iris_runway_new.sdf
